--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 ---
-layout: home
+permalink: /
+title: "About me"
+excerpt: "About me"
 author_profile: true
+redirect_from: 
+  - /about/
+  - /about.html
 ---
+
+I am a 
